# Dat3M

./: .gitattributes  .gitignore  2+2W.litmus  Dartagnan-SVCOMP-WMM.sh  Dartagnan-SVCOMP.sh  Dockerfile  LICENCE  MP.c  Makefile  README.md  artifact  c2bpl.sh  dartagnan.xml  dat3m.desktop  enc.txt  korab.out  korab.sh  libvsync.patch  log4j.xml  mcs.c  new-new.csv  new.csv  notes.txt  orig.csv  pom.xml  rwlock.ll  sql.properties  svcomp.properties  svcomp.txt  temp.txt  test-full.smt2  test.ll  test.sh  test.smt2  tmp.txt  ttas-O0.bpl  ttas.c  xchg-transformation.c  xchg-transformation2.c
artifact-popl/: Dockerfile  README.md  libvsync.patch
benchmarks/: Bakery.ll  Burns.pts  Dekker.c  Dekker.pts  Lamport.ll  Parker.c  Parker.pts  Szymanski.pts
boogiesan/: pom.xml
cat/: aarch64-mixed-new.cat  aarch64-mixed.cat  aarch64.cat  aarch64_diy.cat  aarch64fences.cat  arm.cat  armC1.cat  armC2.cat  armC3.cat  armC4.cat  basic.cat  bpf.cat  c11-experiment.cat  c11-orig.cat  c11-partialsc.cat  c11-simp.cat  c11.cat  cos.cat  cut-aarch64.cat  cut-imm.cat  cut-linux-kernel.cat  cut-power.cat  cut-rc11.cat  cut-riscv.cat  cut-tso.cat  genmc-imm.cat  imm.cat  interrupts-axioms-old.cat  interrupts-axioms.cat  interrupts-defs.cat  interrupts-defs_2.cat  (+79 more)
llvm-passes/atomic-replace/: AtomicReplaceInterface.h  AtomicReplacePass.cpp  CMakeLists.txt  README.md  my_atomics.c  my_atomics.h  wrapper-10.sh  wrapper-15.sh
llvm-passes/atomic-replace/tests/: CMakeLists.txt  example.c  expected-10.diff  expected-13.diff  expected-15.diff  expected_rev.diff  sed-10.txt  sed-13.txt  sed-15.txt
(+40567 files in other folders)
